# mcpdrain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md  hang_report.md
.github/workflows/: ci.yml  release.yml
crates/mcpdrain/: Cargo.toml
crates/mcpdrain-core/: Cargo.toml
crates/mcpdrain-core/src/: buffer.rs  config.rs  drain.rs  lib.rs  protocol.rs  supervisor.rs
crates/mcpdrain-core/tests/: deadlock.rs
crates/mcpdrain/src/: cli.rs  main.rs
docs/: the-8kb-problem.md
