[workspace]
resolver = "2"
members = ["crates/mcpdrain-core", "crates/mcpdrain"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/patchwright/mcpdrain"
homepage = "https://github.com/patchwright/mcpdrain"
keywords = ["mcp", "model-context-protocol", "stdio", "pipe", "deadlock"]
categories = ["command-line-utilities", "development-tools"]
authors = ["patchwright"]
description = "Deadlock-proof stdio guardian for MCP servers."

[workspace.dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "io-std",
    "fs",
    "time",
    "sync",
    "net",
    "signal",
] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
